--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,35 @@
 spring.application.name=perfil
-spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:17879/railway?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=eFthtCqcLxoCTiekSgUZsePqtElfjpoc
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:17879/railway?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=eFthtCqcLxoCTiekSgUZsePqtElfjpoc
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:23813/usercontrol
+spring.datasource.username=root
+spring.datasource.password=sTglWilAkXyTuvSardLPcIizLiwpbvJd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Otras configuraciones recomendadas
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+#spring.application.name=planes
+#server.forward-headers-strategy=framework
+#spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:24076/accountManagerDB?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=JQYaqoVXwZRyPtEmnfJYpjheAWmbAgrg
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
